--- a/src/css/style.css
+++ b/src/css/style.css
@@ -120,3 +120,13 @@ button:hover {
 	/* width: 320px; */
 	margin-bottom: 20px;
 }
+
+.edit-button, .delete-button {
+  background: none;
+  border: 1px solid black;
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
+  cursor: pointer;
+	padding: 0;
+}
